@@ -174,6 +174,9 @@ int main(int argc, char **argv)
 	main_loop();
 
 	exit_program(EXIT_SUCCESS);
+
+	/* NOTREACHED */
+	return EXIT_SUCCESS;
 }
 
 
@@ -262,6 +265,7 @@ static int process_command_line(int argc, char **argv)
 		  case 'h':
 			fprintf(stderr, "%s", help_text);
 			exit(EXIT_SUCCESS);
+			/* NOTREACHED */
 		  case ':':
 			report(RPT_ERR, "Missing option argument for %c", optopt);
 			error = -1;
